--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             
 
     </div>
-    <div id="aspell" class="col-md-3 col-sm-3 col-xs-3 text-center">
+    <div id="enchant" class="col-md-3 col-sm-3 col-xs-3 text-center">
             
     </div>
     <div id = "rnn" class="col-md-3 col-sm-3 col-xs-3 text-center">
