fix aspell->enchant - 2

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <h4 class="text-center">Error word</h4>  
   </div>
   <div class="col-md-3 col-sm-3 col-xs-3">
-    <h4 class="text-center">enchant</h4>  
+    <h4 class="text-center">Enchant</h4>  
   </div>
   <div class="col-md-3 col-sm-3 col-xs-3">
     <h4 class="text-center">RNN</h4>  
