--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
 <div class="container-fluid">
 <div class="row align-items-start">
   <div class="col-6">
-      <label for="exampleFormControlTextarea6">Shadow and placeholder</label>
+      <label for="exampleFormControlTextarea6">Original</label>
       <textarea id="mes" class="form-control" rows="8"></textarea>
   </div>
   <div class="col-6">
-      <label for="exampleFormControlTextarea6">Shadow and placeholder</label>
+      <label for="exampleFormControlTextarea6">Suggestion</label>
       <div id="show-text" class="form-control" rows ="8"></div>
   </div>
 </div>
